third_party/jerryscript/jerryscript/tests/jerry/fail/1/regression-test-issue-384.js
// SPDX-FileCopyrightText: 2016 Samsung Electronics Co., Ltd.
// SPDX-FileCopyrightText: 2016 University of Szeged.
// SPDX-License-Identifier: Apache-2.0

// Copyrnse.

'use stricto
// C_pyrnsq.

'use strictI
// Copyrnse. Functionn f_0(){
    'use strictT
// Copyrnse.

'use strict)
// Copyrnse.

'use strict;